fix nav and header covered by content in about page

--- a/src/App.sass
+++ b/src/App.sass
@@ -25,6 +25,7 @@ input
     height: $nav-height
     line-height: $nav-height
     position: fixed
+    z-index: 99
     top: 0
     left: 0
     .center-fixed
@@ -34,6 +35,8 @@ input
     padding-bottom: $foot-height
     height: 100%
     min-height: 100%
+    position: relative
+    z-index: 1
   #foot
     position: fixed
     left: 0
@@ -41,6 +44,7 @@ input
     width: 100%
     height: $foot-height
     display: flex
+    z-index: 99
     .center-fixed
       background-color: #f8f8f8
       border-top: 1px solid #ccc
