--- a/src/views/About.sass
+++ b/src/views/About.sass
@@ -6,13 +6,13 @@ img
     display: block
     background: #fff
     box-shadow: 0 0 6px #ccc
-    border-radius: 6px;
+    border-radius: 6px
     margin: 1em 0
     .ibox-content
       position: relative
       color: #fff
       .ibox-img
-        widows: 100%
+        width: 100%
         img
           width: 100%
       .ibox-text
